# simple_actor

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yml
benches/: actor_benchmark.rs
examples/heavy_computation/: main.rs
examples/message_broker_with_actor_consumers/: common.rs  main.rs  message_broker.rs  topic.rs
examples/message_broker_with_dyn_consumers/: common.rs  main.rs  message_broker.rs  topic.rs
examples/resource_pool/: common.rs  main.rs  pool.rs
examples/sampler/: common.rs  main.rs  sampler.rs
src/: common.rs  lib.rs
src/actor/: mod.rs
src/actor/client/: hybrid.rs  message.rs  mod.rs  request.rs
src/actor/client/scheduler/: common.rs  message.rs  mod.rs
src/actor/client/sync/: message.rs  mod.rs
src/actor/server/: actor_server.rs  common.rs  mod.rs
src/actor/server/actor/: builder.rs  hybrid.rs  message.rs  mod.rs  request.rs
src/actor/server/actor/builder/: common.rs  mod.rs  one_shot.rs  reusable.rs
src/actor/server/handler/: hybrid.rs  message.rs  mod.rs  request.rs
tests/: common.rs  hybrid_actor_test.rs  message_actor_test.rs  more_actors_test.rs  request_actor_test.rs  request_actor_with_heavy_computing_test.rs
