[package]
name = "simple_actor"
version = "0.1.0"
authors = ["Makra Attila <makraat@ext.otpbank.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.48"

