[package]
name = "simple_actor"
version = "0.1.0"
authors = ["Makra Attila <makraat@ext.otpbank.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
simple_logger = "1.11.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.48"
log = "0.4.14"