[package]
name = "simple_actor"
version = "0.1.0"
authors = ["Makra Attila <makraat@ext.otpbank.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
simple_logger = "4.2.0"
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.64"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.3"
ansi_term = "0.12.1"
futures = "0.3.14"
criterion = { version = "0.3", features = ["async_futures", "async_tokio"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.48"
log = "0.4.14"

[[bench]]
name = "actor_benchmark"
harness = false